ingress/fixtures/output_convertIngress/ingress_different_hosts_same_paths_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`traefik.host1`,`traefik.host2`) && PathPrefix(`/foo`)
    middlewares: []
    priority: 10
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
