ingress/fixtures/output_convertIngress/ingress_redirect_approot_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/`)
    middlewares:
    - name: redirect-17591616686595916377
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
