ingress/fixtures/output_convertIngress/ingress_redirect_approot_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: redirect-17591616686595916377
  namespace: testing
spec:
  redirectRegex:
    regex: traefik.tchouk/$
    replacement: traefik.tchouk/index.html
