ingress/fixtures/output_convertIngress/ingress_redirect_regex_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/`)
    middlewares:
    - name: redirect-11227837511975166935
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    middlewares:
    - name: redirect-11227837511975166935
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
