ingress/fixtures/output_convertIngress/ingress_redirect_regex_03.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: redirect-16681949244266672583
  namespace: testing
spec:
  redirectRegex:
    permanent: true
    regex: foo
    replacement: bar
