ingress/fixtures/output_convertIngress/ingress_rewrite_target_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  namespace: testing
spec:
  routes:
  - kind: Rule
    match: Host(`rewrite`) && PathPrefix(`/api`)
    middlewares:
    - name: replace-path-rewrite-api
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
