ingress/fixtures/output_convertIngress/ingress_with_matcher_modifier_03.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: traefik.tchouk-foo
  namespace: testing
spec:
  stripPrefix:
    prefixes:
    - /foo
