ingress/fixtures/output_convertIngress/ingress_with_passtlscert_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`other`) && PathPrefix(`/sslstuff`)
    middlewares:
    - name: passtlscert-8071666217603188993
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
