ingress/fixtures/output_convertIngress/ingress_with_protocol_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  name: test
  namespace: testing
spec:
  routes:
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/bar`)
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
      scheme: h2c
  - kind: Rule
    match: Host(`traefik.tchouk`) && PathPrefix(`/foo`)
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
      scheme: h2c
