ingress/fixtures/output_convertIngress/ingress_with_ratelimit_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  routes:
  - kind: Rule
    match: Host(`rate-limit`) && PathPrefix(`/ratelimit`)
    middlewares:
    - name: middleware-bar-866989432264405247
      namespace: testing
    - name: middleware-foo-12133503655065674466
      namespace: testing
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
