ingress/fixtures/output_convertIngress/ingress_with_ratelimit_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: middleware-bar-17009375545375373055
  namespace: testing
spec:
  rateLimit:
    average: 4
    burst: 9
