ingress/fixtures/output_convertIngress/ingress_with_ratelimit_03.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: middleware-foo-5684249717850680246
  namespace: testing
spec:
  rateLimit:
    average: 2
    burst: 18
