ingress/fixtures/output_convertIngress/ingress_with_request_modifier_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: requestmodifier-8146275261313797339
  namespace: testing
spec:
  addPrefix:
    prefix: toto
