ingress/fixtures/output_convertIngress/ingress_with_whitelist_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`test`) && PathPrefix(`/whitelist-source-range`)
    middlewares:
    - name: whitelist-9461246880640159817
      namespace: testing
    priority: 0
    services:
    - kind: Service
      name: service1
      namespace: testing
      port: 80
