ingress/fixtures/output_convertIngress/ingress_with_whitelist_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: whitelist-12680651266576797656
  namespace: testing
spec:
  ipWhiteList:
    sourceRange:
    - 1.1.1.1/24
    - 1234:abcd::42/32
