ingress/fixtures/output_convertIngress/ingress_with_whitelist_xforwarded_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`test`) && PathPrefix(`/whitelist-source-range-x-forwarded`)
    middlewares:
    - name: whitelist-6282919470491210895
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
