ingress/fixtures/output_convertIngress/ingress_with_whitelist_xforwarded_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: whitelist-3658280100335485186
  namespace: testing
spec:
  ipWhiteList:
    ipStrategy: {}
    sourceRange:
    - 1.1.1.1/24
    - 1234:abcd::42/32
