ingress/fixtures/output_convertIngress/ingress_with_errorpage_01.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  namespace: testing
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: Host(`error-pages`) && PathPrefix(`/errorpages`)
    middlewares:
    - name: errorpage-bar-4191873217380368336
      namespace: testing
    - name: errorpage-foo-17651800191571261061
      namespace: testing
    priority: 0
    services:
    - name: service1
      port: 80
