ingress/fixtures/output_convertIngress/ingress_with_errorpage_02.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: errorpage-bar-6906619524742457949
  namespace: testing
spec:
  errors:
    query: /foo
    status:
    - "404"
    - "501"
