ingress/fixtures/output_convertIngress/ingress_with_errorpage_03.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  creationTimestamp: null
  name: errorpage-foo-17651800191571261061
  namespace: testing
spec:
  errors:
    query: /bar
    status:
    - "123"
    - "456"
